# rustcraft

./: .env  .gitignore  Cargo.toml  README.md
assets/: registry.json
rustcraft-derive/: Cargo.toml
rustcraft-derive/src/: lib.rs
rustcraft-lib/: Cargo.toml
rustcraft-lib/src/web/: dto.rs
rustcraft-web/: Cargo.toml  README.md  Trunk.toml  index.html
rustcraft-web/src/: main.rs
src/: client_packets.rs  connection.rs  encryption.rs  err.rs  main.rs  nbt.rs  packets.rs  protocol_types.rs  protocol_util.rs  serve.rs  server_packets.rs
src/chunk/: mod.rs  packed_array.rs  palette.rs  section.rs  world.rs
src/data/: blocks.rs  mod.rs
src/packets/: client.rs  mod.rs  parse.rs  server.rs
src/protocol_types/: compound.rs  mod.rs  primitives.rs  traits.rs
src/web/: mod.rs  serve.rs
