[package]
name = "rustcraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
tokio = { version = "1.34.0" , features = ["net", "macros", "rt-multi-thread", "fs", "io-util"]}
async-trait = "0.1.74"
base64 = "0.21.5"
openssl = "0.10.59"
rand = "0.8.5"
num-bigint = "0.4.4"
serde = { version = "1.0.192", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json"] }
log = "0.4.20"
env_logger = "0.10.1"
dotenv = "0.15.0"