[package]
name = "rustcraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustcraft-derive = { path = "rustcraft-derive" }
colored = "2.0.4"
tokio = { version = "1.34.0" , features = ["net", "macros", "rt-multi-thread", "fs", "io-util"]}
async-trait = "0.1.74"
base64 = "0.21.5"
openssl = "0.10.60"
rand = "0.8.5"
num-bigint = "0.4.4"
serde = { version = "1.0.192", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json"] }
log = "0.4.20"
env_logger = "0.10.1"
dotenv = "0.15.0"
rsa-der = "0.3.0"
num-bigint-dig = "0.8.4"
sha1 = "0.10.6"
uuid = "1.5.0"
md-5 = "0.10.6"
cfb-mode = "0.8.2"
aes = "0.8.3"
serde_json = "1.0.108"
async-nbt = { git = "https://github.com/realmayus/async-nbt" }